--- a/Fake-product-identification/package.json
+++ b/Fake-product-identification/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "axios": "^1.6.8",
     "env-cmd": "^10.1.0",
     "ethers": "^5.5.4",
     "qrcode.react": "^1.0.1",
@@ -19,7 +19,7 @@
     "react-modal": "^3.14.4",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-link": "^2.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
