--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,7 @@ services:
         condition: service_healthy  # Ensure Ganache is healthy before starting eth-back
 
   frontend:
-    image: priyanshugupta753/product_verification:2
-    volumes:
-      - /product-identification/node_modules
+    image: priyanshugupta753/build:latest
     ports:
       - '3000:3000'
     depends_on:
