--- a/deploy.yml
+++ b/deploy.yml
@@ -1,7 +1,8 @@
----
-- name: Running the Docker compose script
+- name: Run Docker Compose script
   hosts: localhost
-  remote_user: root
+  become: yes
   tasks:
-    - name: Running the script
+    - name: Start Docker Compose services
       shell: docker-compose up
+      args:
+        chdir: /var/lib/jenkins/workspace/eth-project/
